# albumDatabaseQtCpp

./: CMakeLists.txt  database.cpp  database.h  enums.cpp  enums.h  imagefile.cpp  imagefile.h  languagemanager.cpp  languagemanager.h  main.cpp  thememanager.cpp  thememanager.h
QML/: AddAlbumForm.qml  AlbumDetail.qml  AlbumList.qml  AppMenuBar.qml  DestructiveButton.qml  EditAlbumForm.qml  GenreSelectInput.qml  ImageSelectInput.qml  Main.qml  Modal.qml  SearchPanel.qml  ValidationTextField.qml
translations/: app_cs.ts  app_en.ts
